remove setUp method from FruitServiceImpl and ParserImpl classes