@@ -3,12 +3,12 @@ package core.basesyntax.service;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertThrows;
 
-import core.basesyntax.exception.WrongFileType;
+import core.basesyntax.exception.WrongFileTypeException;
 import core.basesyntax.service.impl.WriterImpl;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
-import java.util.Arrays;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -19,11 +19,13 @@ public class WriterImplTest {
     private static final String INVALID_FILE_NAME = "src/main/invalid/invalid";
     private static final String WRONG_TYPE_FILE_NAME = "src/test/resources/wrongTypeFileName.css";
     private static final String VALID_FILE_NAME = "src/test/resources/testRecord.csv";
-    private static final Map<String, Integer> MAP_TO_WRITE = Map.of("apple", 20,"banana", 10);
+    private static final Map<String, Integer> MAP_TO_WRITE = new LinkedHashMap<>();
     private static Writer writer;
 
     @BeforeAll
     static void beforeAll() {
+        MAP_TO_WRITE.put("apple", 20);
+        MAP_TO_WRITE.put("banana", 10);
         writer = new WriterImpl(MAP_TO_WRITE);
     }
 
@@ -41,13 +43,13 @@ public class WriterImplTest {
 
     @Test
     public void write_wrongTypeFileName_notOk() {
-        assertThrows(WrongFileType.class, () ->
+        assertThrows(WrongFileTypeException.class, () ->
                 writer.write(WRONG_TYPE_FILE_NAME));
     }
 
     @Test
     public void write_validFileName_ok() throws IOException {
-        List<String> expected = Arrays.asList("apple,20", "banana,10");
+        List<String> expected = List.of("apple,20", "banana,10");
         writer.write(VALID_FILE_NAME);
         List<String> actual = Files.readAllLines(Paths.get(VALID_FILE_NAME))
                 .stream().skip(1).collect(Collectors.toList());
